- The Hammerli Gemini and other pistols with a base Concealability modifier greater than 0 now get the appropriate Chameleon Coating weapon mod available to them.
- Stick-n-Shock Flechette Rounds now properly adjust the damage types of weapons that can only fire flechette rounds.

Changed/New Strings:
- String_RestrictedItemsHidden
- Label_Options_MugshotCompression
- Label_Options_ImageQuality
- String_Lossless_Compression_Option
- String_Lossy_Compression_Option
- String_Bold
- String_Italic
- String_Underline
- String_Strikethrough
- String_Font
- String_ForeColor
- String_BackColor
- String_AlignLeft
- String_AlignCenter
- String_AlignRight
- String_UnorderedList
- String_IncreaseIndent
- String_DecreaseIndent
- String_AstralReputation
- String_WildReputation
- Label_AstralReputation
- Label_WildReputation
- Message_UnderLanguageLimit
- Tip_SkillsKnowledgeSkills
- Skill_NativeLanguageLong
- Message_NewNativeLanguageSkill
- Label_CMRecovery

Build 212
Application Changes:
- When entering Nuyen and Karma expenses for Working for the Man/People, it's now possible to flag the expense entry as always being present in the Expense log. This will in effect reduce the Career Karma or Career Nuyen by the selected amount. Closes #4096, closes #3613
- Added InitiationGroup, InitiationOrdeal and InitiationSchooling option values for Submersion and Initiation respectively. Ensures that values are correct across multiple locations. Currently not exposed to user change. 
- Traditions that have an empty Drain value will automatically be permitted to choose their drain attribute. Allows the Toxic tradition to select the Drain attributes to use.
- Added contributetobp property to Qualities as an accessible property via XML. Allows for a quality to contribute to your Limit, but not consume karma during character creation. Has no effect during career mode. 