@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<chummer>
+  <accessories>
+      <accessory>
+        <id>0c315fd8-3a1a-4748-8359-cb6a04436fbd</id>
+        <mount>Under/Internal</mount>
+      </accessory>
+    </accessories>
+</chummer>
